Issue #SB-533 fix:oles and Location alignment is not proper.

--- a/src/app/themes/default/assets/styles/main.css
+++ b/src/app/themes/default/assets/styles/main.css
@@ -1043,6 +1043,7 @@ div:focus {
   font-size: 1.3em !important;
 }
 .filterLocationInput {
+  padding-top: 12px !important;
   border: 0!important;
   border-bottom: 1px solid #979797!important;
   border-radius: 0!important;
